--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
 			}, 1000);
 			// Construct app and load initial path
 			$(function() {
-				app = new haste('Test Paste', { twitter: true });
+				app = new haste('IndionicHost Paste', { twitter: true });
 				handlePop({ target: window });
 			});
 		</script>
